Improve Vercel configuration and add fallback API URL

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -21,5 +21,7 @@
   ],
   "env": {
     "REACT_APP_API_URL": "https://soverdadeiro-production.up.railway.app"
-  }
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "build"
 }
