--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://soverdadeiro-production-1f46.up.railway.app",
   "eslintConfig": {
     "extends": [
       "react-app",
